Criação da aplicação com tabela

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <title>Testes com ReactJS</title>
+<script type="text/javascript" src="assets/js/app.js"></script>
 </head>
 <body>
     <div id="container">
-    <!-- Os componentes serão carregados aqui --></div>
+    <!-- Os componentes serão carregados aqui -->
+    </div>
 </body>
 </html>
